lib/datetime/y.output

state 0
	$accept: .spec $end 
	items: .    (26)

	@  shift 4
	.  reduce 26 (src line 114)

	spec  goto 1
	unixtime  goto 2
	items  goto 3

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  unixtime.    (1)

	.  reduce 1 (src line 42)


state 3
	spec:  items.    (2)
	items:  items.item 

	T_INTEGER  shift 15
	T_PLUS  shift 23
	T_MINUS  shift 24
	T_MONTHNAME  shift 16
	T_DAYNAME  shift 17
	T_DAYSHIFT  shift 20
	T_RELATIVE  shift 18
	A  shift 26
	P  shift 22
	.  reduce 2 (src line 43)

	o_sign_integer  goto 19
	item  goto 5
	time  goto 6
	iso_8601_time  goto 7
	date  goto 8
	iso_8601_date  goto 9
	iso_8601_date_time  goto 10
	day_or_month  goto 11
	relative  goto 12
	iso_8601_duration  goto 13
	integer  goto 14
	relunits  goto 21
	relunit  goto 25

state 4
	unixtime:  @.o_sign_integer 

	T_INTEGER  shift 28
	T_PLUS  shift 23
	T_MINUS  shift 24
	.  error

	o_sign_integer  goto 27

state 5
	items:  items item.    (27)

	.  reduce 27 (src line 116)


state 6
	item:  time.    (28)

	.  reduce 28 (src line 118)


state 7
	item:  iso_8601_time.    (29)

	.  reduce 29 (src line 120)


state 8
	item:  date.    (30)

	.  reduce 30 (src line 121)


state 9
	item:  iso_8601_date.    (31)
	iso_8601_date_time:  iso_8601_date.T iso_8601_time 

	T  shift 29
	.  reduce 31 (src line 122)


state 10
	item:  iso_8601_date_time.    (32)

	.  reduce 32 (src line 123)


state 11
	item:  day_or_month.    (33)

	.  reduce 33 (src line 124)


state 12
	item:  relative.    (34)

	.  reduce 34 (src line 125)


state 13
	item:  iso_8601_duration.    (35)

	.  reduce 35 (src line 126)


state 14
	item:  integer.    (36)

	.  reduce 36 (src line 127)


15: shift/reduce conflict (shift 43(0), red'n 96(0)) on T_PLUS
15: shift/reduce conflict (shift 35(0), red'n 96(0)) on T_MINUS
 15: reduce/reduce conflict  (red'ns 17 and 96) on T_DAYNAME
15: shift/reduce conflict (shift 39(0), red'n 96(0)) on A
15: shift/reduce conflict (shift 40(0), red'n 96(0)) on P
 15: reduce/reduce conflict  (red'ns 96 and 9) on T_MONTHNAME
state 15
	o_sign_integer:  T_INTEGER.    (17)
	time:  T_INTEGER.ampm o_zone 
	time:  T_INTEGER.: T_INTEGER ampm o_zone 
	time:  T_INTEGER.: T_INTEGER : T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER.zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER : T_INTEGER o_zone 
	date:  T_INTEGER./ T_INTEGER 
	date:  T_INTEGER./ T_INTEGER / T_INTEGER 
	date:  T_INTEGER.o_dayqual o_of T_MONTHNAME 
	date:  T_INTEGER.o_dayqual o_of T_MONTHNAME T_INTEGER 
	date:  T_INTEGER.T_MINUS T_MONTHNAME T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER.W T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS W T_INTEGER 
	iso_8601_date:  T_INTEGER.T_MINUS W T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date_time:  T_INTEGER.T T_INTEGER o_zone 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_MONTHNAME 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_INTEGER 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER.T_DAYQUAL T_DAYNAME of T_RELATIVE T_MONTHNAME 
	integer:  T_INTEGER.    (96)
	o_dayqual: .    (9)

	$end  reduce 96 (src line 438)
	T_DAYQUAL  shift 38
	T_INTEGER  reduce 96 (src line 438)
	T_PLUS  shift 43
	T_MINUS  shift 35
	T_MONTHNAME  reduce 9 (src line 54)
	T_DAYSHIFT  reduce 96 (src line 438)
	T_RELATIVE  reduce 96 (src line 438)
	T_ZONE  shift 41
	O  reduce 9 (src line 54)
	A  shift 39
	P  shift 40
	:  shift 31
	/  shift 33
	W  shift 36
	T  shift 37
	.  reduce 17 (src line 73)

	sign  goto 42
	ampm  goto 30
	zone  goto 32
	o_dayqual  goto 34

16: shift/reduce conflict (shift 44(0), red'n 58(0)) on T_INTEGER
state 16
	date:  T_MONTHNAME.T_INTEGER o_dayqual 
	date:  T_MONTHNAME.T_INTEGER o_dayqual comma T_INTEGER 
	day_or_month:  T_MONTHNAME.    (58)

	T_INTEGER  shift 44
	.  reduce 58 (src line 301)


state 17
	day_or_month:  T_DAYNAME.o_comma 
	o_comma: .    (4)

	,  shift 47
	.  reduce 4 (src line 47)

	comma  goto 46
	o_comma  goto 45

state 18
	day_or_month:  T_RELATIVE.T_DAYNAME 
	day_or_month:  T_RELATIVE.T_MONTHNAME 
	relunit:  T_RELATIVE.T_OFFSET 
	relunit:  T_RELATIVE.T_DAYS 

	T_MONTHNAME  shift 49
	T_DAYNAME  shift 48
	T_DAYS  shift 51
	T_OFFSET  shift 50
	.  error


state 19
	day_or_month:  o_sign_integer.T_DAYNAME 
	relunit:  o_sign_integer.T_OFFSET 
	relunit:  o_sign_integer.T_DAYS 
	relunit:  o_sign_integer.T_ISOYD 
	relunit:  o_sign_integer.T_ISOHS 
	relunit:  o_sign_integer.M $$80 o_sign_integer W 

	T_DAYNAME  shift 52
	T_DAYS  shift 54
	T_OFFSET  shift 53
	T_ISOYD  shift 55
	T_ISOHS  shift 56
	M  shift 57
	.  error


state 20
	day_or_month:  T_DAYSHIFT.    (67)

	.  reduce 67 (src line 343)


state 21
	relative:  relunits.    (68)
	relative:  relunits.T_AGO 

	T_AGO  shift 58
	.  reduce 68 (src line 349)


state 22
	iso_8601_duration:  P.ymd_units o_t_hms_units 
	iso_8601_duration:  P.t_hms_units 
	iso_8601_duration:  P.T_INTEGER W 

	T_INTEGER  shift 61
	T  shift 63
	.  error

	ymd_units  goto 59
	t_hms_units  goto 60
	ymd_unit  goto 62

state 23
	o_sign_integer:  T_PLUS.T_INTEGER 

	T_INTEGER  shift 64
	.  error


state 24
	o_sign_integer:  T_MINUS.T_INTEGER 

	T_INTEGER  shift 65
	.  error


25: shift/reduce conflict (shift 28(0), red'n 70(0)) on T_INTEGER
25: shift/reduce conflict (shift 23(0), red'n 70(0)) on T_PLUS
25: shift/reduce conflict (shift 24(0), red'n 70(0)) on T_MINUS
25: shift/reduce conflict (shift 68(0), red'n 70(0)) on T_RELATIVE
25: shift/reduce conflict (shift 26(0), red'n 70(0)) on A
state 25
	relunits:  relunit.    (70)
	relunits:  relunit.relunits 

	T_INTEGER  shift 28
	T_PLUS  shift 23
	T_MINUS  shift 24
	T_RELATIVE  shift 68
	A  shift 26
	.  reduce 70 (src line 355)

	o_sign_integer  goto 67
	relunits  goto 66
	relunit  goto 25

state 26
	relunit:  A.T_OFFSET 
	relunit:  A.T_DAYS 

	T_DAYS  shift 70
	T_OFFSET  shift 69
	.  error


state 27
	unixtime:  @ o_sign_integer.    (25)

	.  reduce 25 (src line 106)


state 28
	o_sign_integer:  T_INTEGER.    (17)

	.  reduce 17 (src line 73)


state 29
	iso_8601_date_time:  iso_8601_date T.iso_8601_time 

	T_INTEGER  shift 72
	.  error

	iso_8601_time  goto 71

30: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
30: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
state 30
	time:  T_INTEGER ampm.o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	.  reduce 23 (src line 102)

	sign  goto 42
	zone  goto 74
	o_zone  goto 73

state 31
	time:  T_INTEGER :.T_INTEGER ampm o_zone 
	time:  T_INTEGER :.T_INTEGER : T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER :.T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER :.T_INTEGER : T_INTEGER o_zone 

	T_INTEGER  shift 76
	.  error


state 32
	iso_8601_time:  T_INTEGER zone.    (40)

	.  reduce 40 (src line 144)


state 33
	date:  T_INTEGER /.T_INTEGER 
	date:  T_INTEGER /.T_INTEGER / T_INTEGER 

	T_INTEGER  shift 77
	.  error


state 34
	date:  T_INTEGER o_dayqual.o_of T_MONTHNAME 
	date:  T_INTEGER o_dayqual.o_of T_MONTHNAME T_INTEGER 
	o_of: .    (7)

	O  shift 80
	.  reduce 7 (src line 52)

	of  goto 79
	o_of  goto 78

35: shift/reduce conflict (shift 82(0), red'n 16(0)) on T_INTEGER
state 35
	sign:  T_MINUS.    (16)
	date:  T_INTEGER T_MINUS.T_MONTHNAME T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.T_INTEGER T_MINUS T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.W T_INTEGER 
	iso_8601_date:  T_INTEGER T_MINUS.W T_INTEGER T_MINUS T_INTEGER 

	T_INTEGER  shift 82
	T_MONTHNAME  shift 81
	W  shift 83
	.  error


state 36
	iso_8601_date:  T_INTEGER W.T_INTEGER 

	T_INTEGER  shift 84
	.  error


state 37
	iso_8601_date_time:  T_INTEGER T.T_INTEGER o_zone 

	T_INTEGER  shift 85
	.  error


state 38
	o_dayqual:  T_DAYQUAL.    (10)
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_MONTHNAME 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_MONTHNAME T_INTEGER 
	day_or_month:  T_INTEGER T_DAYQUAL.T_DAYNAME of T_RELATIVE T_MONTHNAME 

	T_DAYNAME  shift 86
	.  reduce 10 (src line 54)


state 39
	ampm:  A.M 
	ampm:  A.. M . 

	M  shift 87
	.  shift 88
	.  error


state 40
	ampm:  P.M 
	ampm:  P.. M . 

	M  shift 89
	.  shift 90
	.  error


state 41
	zone:  T_ZONE.    (20)

	.  reduce 20 (src line 85)


state 42
	zone:  sign.T_INTEGER 
	zone:  sign.T_INTEGER : T_INTEGER 

	T_INTEGER  shift 91
	.  error


state 43
	sign:  T_PLUS.    (15)

	.  reduce 15 (src line 70)


state 44
	date:  T_MONTHNAME T_INTEGER.o_dayqual 
	date:  T_MONTHNAME T_INTEGER.o_dayqual comma T_INTEGER 
	o_dayqual: .    (9)

	T_DAYQUAL  shift 93
	.  reduce 9 (src line 54)

	o_dayqual  goto 92

state 45
	day_or_month:  T_DAYNAME o_comma.    (57)

	.  reduce 57 (src line 296)


state 46
	o_comma:  comma.    (5)

	.  reduce 5 (src line 48)


state 47
	comma:  ,.    (3)

	.  reduce 3 (src line 45)


state 48
	day_or_month:  T_RELATIVE T_DAYNAME.    (59)

	.  reduce 59 (src line 305)


state 49
	day_or_month:  T_RELATIVE T_MONTHNAME.    (60)

	.  reduce 60 (src line 309)


state 50
	relunit:  T_RELATIVE T_OFFSET.    (73)

	.  reduce 73 (src line 363)


state 51
	relunit:  T_RELATIVE T_DAYS.    (76)

	.  reduce 76 (src line 373)


state 52
	day_or_month:  o_sign_integer T_DAYNAME.    (61)

	.  reduce 61 (src line 313)


state 53
	relunit:  o_sign_integer T_OFFSET.    (72)

	.  reduce 72 (src line 359)


state 54
	relunit:  o_sign_integer T_DAYS.    (75)

	.  reduce 75 (src line 369)


state 55
	relunit:  o_sign_integer T_ISOYD.    (78)

	.  reduce 78 (src line 379)


state 56
	relunit:  o_sign_integer T_ISOHS.    (79)

	.  reduce 79 (src line 386)


state 57
	relunit:  o_sign_integer M.$$80 o_sign_integer W 
	$$80: .    (80)

	.  reduce 80 (src line 389)

	$$80  goto 94

state 58
	relative:  relunits T_AGO.    (69)

	.  reduce 69 (src line 351)


59: shift/reduce conflict (shift 98(0), red'n 94(0)) on T_INTEGER
state 59
	iso_8601_duration:  P ymd_units.o_t_hms_units 
	ymd_units:  ymd_units.ymd_unit 
	o_t_hms_units: .    (94)

	T_INTEGER  shift 98
	T  shift 63
	.  reduce 94 (src line 434)

	o_t_hms_units  goto 95
	t_hms_units  goto 97
	ymd_unit  goto 96

state 60
	iso_8601_duration:  P t_hms_units.    (83)

	.  reduce 83 (src line 399)


state 61
	iso_8601_duration:  P T_INTEGER.W 
	ymd_unit:  T_INTEGER.T_ISOYD 
	ymd_unit:  T_INTEGER.M 

	T_ISOYD  shift 100
	M  shift 101
	W  shift 99
	.  error


state 62
	ymd_units:  ymd_unit.    (85)

	.  reduce 85 (src line 405)


state 63
	t_hms_units:  T.hms_units 

	T_INTEGER  shift 104
	.  error

	hms_units  goto 102
	hms_unit  goto 103

state 64
	o_sign_integer:  T_PLUS T_INTEGER.    (18)

	.  reduce 18 (src line 75)


state 65
	o_sign_integer:  T_MINUS T_INTEGER.    (19)

	.  reduce 19 (src line 79)


state 66
	relunits:  relunit relunits.    (71)

	.  reduce 71 (src line 357)


state 67
	relunit:  o_sign_integer.T_OFFSET 
	relunit:  o_sign_integer.T_DAYS 
	relunit:  o_sign_integer.T_ISOYD 
	relunit:  o_sign_integer.T_ISOHS 
	relunit:  o_sign_integer.M $$80 o_sign_integer W 

	T_DAYS  shift 54
	T_OFFSET  shift 53
	T_ISOYD  shift 55
	T_ISOHS  shift 56
	M  shift 57
	.  error


state 68
	relunit:  T_RELATIVE.T_OFFSET 
	relunit:  T_RELATIVE.T_DAYS 

	T_DAYS  shift 51
	T_OFFSET  shift 50
	.  error


state 69
	relunit:  A T_OFFSET.    (74)

	.  reduce 74 (src line 366)


state 70
	relunit:  A T_DAYS.    (77)

	.  reduce 77 (src line 376)


state 71
	iso_8601_date_time:  iso_8601_date T iso_8601_time.    (55)

	.  reduce 55 (src line 286)


state 72
	iso_8601_time:  T_INTEGER.zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER o_zone 
	iso_8601_time:  T_INTEGER.: T_INTEGER : T_INTEGER o_zone 

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	:  shift 105
	.  error

	sign  goto 42
	zone  goto 32

state 73
	time:  T_INTEGER ampm o_zone.    (37)

	.  reduce 37 (src line 131)


state 74
	o_zone:  zone.    (24)

	.  reduce 24 (src line 104)


state 75
	sign:  T_MINUS.    (16)

	.  reduce 16 (src line 71)


76: shift/reduce conflict (shift 43(0), red'n 23(0)) on T_PLUS
76: shift/reduce conflict (shift 75(0), red'n 23(0)) on T_MINUS
76: shift/reduce conflict (shift 39(0), red'n 23(0)) on A
76: shift/reduce conflict (shift 40(0), red'n 23(0)) on P
state 76
	time:  T_INTEGER : T_INTEGER.ampm o_zone 
	time:  T_INTEGER : T_INTEGER.: T_INTEGER ampm o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER.o_zone 
	iso_8601_time:  T_INTEGER : T_INTEGER.: T_INTEGER o_zone 
	o_zone: .    (23)

	T_PLUS  shift 43
	T_MINUS  shift 75
	T_ZONE  shift 41
	A  shift 39
	P  shift 40
	:  shift 107
	.  reduce 23 (src line 102)
